# repare

./: .gitignore  README.md  pyproject.toml  repare-environment.yml
benchmarks/published/: analyze_gurgy_pedigrees.py  compare_gurgy_pedigrees.py  compare_gurgy_subset_pedigrees.py  compare_nepluyevsky_pedigrees.py  plot_gurgy_ancibd.py  plot_resource_benchmark_data.py  reconstruct_koszyce_pedigree.py  relation_comparison.py  run_comparisons.py  run_evaluations.py  run_resource_benchmark.py  stitch_multi_panel_published_plots.py
benchmarks/published/blocher/: nodes.csv
benchmarks/published/comparator/: analysis_utils.py  relation_comparison.py
benchmarks/published/evaluator/: comparison_utils.py  pedigree_evaluator.py
benchmarks/published/fowler/: algorithm_nodes.csv  algorithm_relations_READv2.csv  algorithm_relations_custom.csv  inferred_relations_custom.csv  nodes.csv  published_relations.csv
benchmarks/published/results/: results.csv
benchmarks/published/rivollat/: nodes.csv  (+4 more)
benchmarks/simulations/: plot_data.py  plot_parameter_data.py  plot_pedigree_level_results.py  plot_sampling_data.py  run_parameter_experiment.py  run_sampling_experiment.py  run_simulations.py  sim_dev.ipynb  simulated_pedigree.py  stitch_multi_panel_simulation_plots.py  test_nodes.csv  test_relations.csv
examples/: nodes.csv  relations.csv
examples/outputs/: corrected_input_relations.csv
src/pedigree_package/: __init__.py  main.py  pedigree.py  pedigree_ensemble.py  pedigree_reconstructor.py
src/repare/: main.py  pedigree.py  pedigree_reconstructor.py
tests/: test_pedigree_reconstructor.py
(+7472 files in other folders)
