[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "pedigree_package"
dynamic = ["version"]
dependencies = [
    "pandas",
    "networkx",
    "tqdm",
    "matplotlib",
]

[project.optional-dependencies]
benchmark = ["scikit-learn", "seaborn"]
plot = ["pygraphviz"]

[project.scripts]
trees = "pedigree_package.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
